<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.two.TwoDFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/arial"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chel"
        android:textSize="20sp"
        android:textColor="@color/colorBlue"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tvMM"
        app:layout_constraintBottom_toBottomOf="@id/tvMM"
        app:layout_constraintStart_toEndOf="@id/tvMM"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvChel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_card_background"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_date_range"
                app:layout_constraintBottom_toBottomOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="@id/tvDate"
                app:layout_constraintEnd_toStartOf="@id/tvDate"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/arial"
                android:text="@string/date"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="179"
                android:fontFamily="@font/arial"
                android:textSize="60sp"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerThreeD"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loading" />




</androidx.constraintlayout.widget.ConstraintLayout>