<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.two.TwoDFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/arial"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chel"
        android:textSize="20sp"
        android:textColor="@color/colorBlue"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tvMM"
        app:layout_constraintBottom_toBottomOf="@id/tvMM"
        app:layout_constraintStart_toEndOf="@id/tvMM"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvChel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_card_background"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_date_range"
                app:layout_constraintBottom_toBottomOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="@id/tvDate"
                app:layout_constraintEnd_toStartOf="@id/tvDate"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/arial"
                android:text="@string/date"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_access_alarm"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/arial"
                android:text="@string/time"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/imvTime"
                app:layout_constraintStart_toEndOf="@id/imvTime"
                app:layout_constraintTop_toTopOf="@id/imvTime" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seventy_nine"
                android:fontFamily="@font/arial"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VAL"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/arial"
                app:layout_constraintEnd_toEndOf="@id/tvValue"
                app:layout_constraintBottom_toTopOf="@id/tvValue"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:text="1303.97"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                 />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SET"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/arial"
                app:layout_constraintStart_toStartOf="@id/tvSetValue"
                app:layout_constraintBottom_toTopOf="@id/tvSetValue"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSetValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:text="64469.56"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loading" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvZayKwat"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/arial"
        android:gravity="center"
        android:text="စျေးကွက်ပိတ်"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvZayKwat">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/morning"
                layout="@layout/layout_item_morning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/afternoon"
                layout="@layout/layout_item_afternoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/morning" />

            <View
                android:id="@+id/tvAd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/afternoon" />

            <include
                android:id="@+id/midAfternoon"
                layout="@layout/layout_item_mid_afternoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAd" />

            <include
                android:id="@+id/evening"
                layout="@layout/layout_item_evening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/midAfternoon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>